--- a/redThon/templates/game.html
+++ b/redThon/templates/game.html
@@ -6,7 +6,11 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
     <script defer src="https://pyscript.net/latest/pyscript.js"></script>
+    <link rel="stylesheet" href="../static/font_style.css">
     <style>
+         * {
+            font-family: "GODO";
+        }
         .flip { 
             width: 200px;
             height: 275px;
