--- a/redThon/templates/cardStudy.html
+++ b/redThon/templates/cardStudy.html
@@ -29,7 +29,7 @@
         background-repeat: repeat;
     }
 
-    .front2, .back2 {
+    .front3, .back2 {
         z-index:999;
         padding:20px;
         position: absolute;
@@ -45,7 +45,7 @@
         transform: translate(-50%, -50%);
     }
         
-    .front2 {
+    .front3 {
         background: #e8d5b7; 
     }
         
@@ -158,6 +158,8 @@
     }
 
     [type=radio] {
+        width:22px;
+        height:22px;
         border:5px solid brown;
     }
 
@@ -292,7 +294,7 @@
     </py-script>
 
     <!-- 북마크 시작 -->
-    <div id="bookmarkDiv" class="front2" style="overflow-y:scroll;display:none;">
+    <div id="bookmarkDiv" class="front3" style="overflow-y:scroll;display:none;">
         <!-- <div id="shadow" class="front2" style="visibility: hidden;background:black;top:50%;width:100%;height:100%;opacity: 0.8;"></div> -->
         <img id="closePop" onclick="close_pop()" src="../static/img/exit_Icon.png" style="position: absolute; right: 1%; top: 3%;" width=5% height=8% alt ="cookie1.png">
         <br><br><br>
@@ -486,10 +488,8 @@
         //radio 버튼 클릭 이벤트 
         $("input:radio[name=sel_answer]").click(function(){
             var value = $("input[type=radio][name=sel_answer]:checked").val();
-            alert(value);
             if($("input:radio[name=sel_answer]:checked").val()){
                 //답안 맞는지 체크 후 data-correct = true 이면
-                alert("선택?");
                 $("#correctIcon_ra1").show();
             }
         });
@@ -507,12 +507,12 @@
                     for(var i = 0; i < result.length; i++) {
                         //alert("북마크"+i+": "+result[i]["card"]["card_level"]+"-"+result[i]["card"]["card_temp"]);
                         //동적 추가
-                        if(result[i]["card"]["card_type"] == "1") {
+                        if(result[i]["card"]["card_type"] == "1") { 
                             //카드 유형1
-                            $("#bookmarkhtml").append("<div id='bookMarkCard"+i+"' class='card_mini' py-click ='function_bookMarkCardD' onclick='location=\"/cardstudy?stage="+result[i]["card"]["card_level"]+"&temp="+result[i]["card"]["card_temp"]+"\";'><div class='front' style='font-size:15px;'>["+result[i]["card"]["card_level"]+"강 "+result[i]["card"]["card_temp"]+"번 카드]</div></div>");
-                        } else if(result[i]["card"]["card_type"] == "2") {
+                            $("#bookmarkhtml").append("<div id='bookMarkCard"+i+"' class='card_mini' style='margin-right:6px;' py-click ='function_bookMarkCardD' onclick='location=\"/cardstudy?stage="+result[i]["card"]["card_level"]+"&temp="+result[i]["card"]["card_temp"]+"\";'><div class='front' style='font-size:30px;'>[ "+result[i]["card"]["card_level"]+"강 "+result[i]["card"]["card_temp"]+"번 ]</div></div>");
+                        } else if(result[i]["card"]["card_type"] == "2") { 
                             //카드 유형2
-                            $("#bookmarkhtml").append("<div id='bookMarkCard"+i+"' class='card_mini' py-click ='function_bookMarkCardD' onclick='location=\"/cardstudy?stage="+result[i]["card"]["card_level"]+"&temp="+result[i]["card"]["card_temp"]+"\";'><div class='front' style='flex-direction:column; font-size:15px;text-align:left;'><div>["+result[i]["card"]["card_level"]+"강 "+result[i]["card"]["card_temp"]+"번 카드]");
+                            $("#bookmarkhtml").append("<div id='bookMarkCard"+i+"' class='card_mini' style='margin-right:6px;' py-click ='function_bookMarkCardD' onclick='location=\"/cardstudy?stage="+result[i]["card"]["card_level"]+"&temp="+result[i]["card"]["card_temp"]+"\";'><div class='front' style='flex-direction:column; font-size:30px;text-align:left;'><div>[ "+result[i]["card"]["card_level"]+"강 "+result[i]["card"]["card_temp"]+"번 ]");
                         }
                         
                         $("#bookmarkDiv").show();
