--- a/redThon/templates/finalStudy1.html
+++ b/redThon/templates/finalStudy1.html
@@ -30,25 +30,6 @@
         font-weight:bold;
     }
 
-    .front2, .back2 {
-        z-index:999;
-        position: absolute;
-        left: 50%; top: 53%;
-        width: 80%; 
-        height: 80%;
-        backface-visibility: hidden;
-        display: flex;
-        visibility:hidden;
-        justify-content: center;
-        align-items: center;
-        color: #e8d5b7;
-        transform: translate(-50%, -50%);
-    }
-        
-    .front2 {
-        background: tomato; 
-    }
-        
     .image_text_front, .image_text_back {
         color: white;
         position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);transition: .4s;transform-style: preserve-3d;
@@ -131,6 +112,38 @@
         padding:5%;
     } 
 
+    .card_mini {
+        width: 18%; 
+        height: 250px; 
+        position: relative;
+        transition: .4s;
+        transform-style: preserve-3d;
+        /* transform: translate(-50%, -50%); */
+        background-image: url(../static/img/wordCard-1.png);
+        background-size: 100% 100%;
+        background-repeat: repeat;
+        display: inline-block;
+    }
+
+    .front2, .back2 {
+        z-index:999;
+        padding:20px;
+        position: absolute;
+        left: 50%; top: 53%;
+        width: 75%; 
+        height: 80%;
+        backface-visibility: hidden;
+        /* display: flex; */
+        /* visibility:hidden; */
+        /* justify-content: center; */
+        align-items: center;
+        color: #fff;
+        transform: translate(-50%, -50%);
+    }
+        
+    .front2 {
+        background: #e8d5b7; 
+    }
 
     .front, .back {
         font-weight : bold;
@@ -143,7 +156,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        color: #e8d5b7;
+        color: #fff;
     }
 
     .back { 
@@ -190,20 +203,54 @@
                 1000
             )
     </py-script>
+    <script>
+        function open_pop(){
+            //북마크 정보 갱신
+            $.ajax({
+				type: "GET",
+				url: "/bookmark_load",
+				cache: false,
+				async: false,
+				success: function(result) {
+                    $("#bookmarkhtml").html("");
+                    for(var i = 0; i < result.length; i++) {
+                        //alert("북마크"+i+": "+result[i]["card"]["card_level"]+"-"+result[i]["card"]["card_temp"]);
+                        //동적 추가
+                        if(result[i]["card"]["card_type"] == "1") { 
+                            //카드 유형1
+                            $("#bookmarkhtml").append("<div id='bookMarkCard"+i+"' class='card_mini' style='margin-right:6px;' py-click ='function_bookMarkCardD' onclick='location=\"/cardstudy?stage="+result[i]["card"]["card_level"]+"&temp="+result[i]["card"]["card_temp"]+"\";'><div class='front' style='font-size:30px;'>[ "+result[i]["card"]["card_level"]+"강 "+result[i]["card"]["card_temp"]+"번 ]</div></div>");
+                        } else if(result[i]["card"]["card_type"] == "2") { 
+                            //카드 유형2
+                            $("#bookmarkhtml").append("<div id='bookMarkCard"+i+"' class='card_mini' style='margin-right:6px;' py-click ='function_bookMarkCardD' onclick='location=\"/cardstudy?stage="+result[i]["card"]["card_level"]+"&temp="+result[i]["card"]["card_temp"]+"\";'><div class='front' style='flex-direction:column; font-size:30px;text-align:left;'><div>[ "+result[i]["card"]["card_level"]+"강 "+result[i]["card"]["card_temp"]+"번 ]");
+                        }
+                        
+                        $("#bookmarkDiv").show();
+                    }
+                    
+                    
+                    //이동
+				}
+			});
 
- <!-- 북마크 시작 -->
-   <div class="front2" style="overflow-y:scroll;">
-   	Scroll test<br>11<br>12<br>13<br>7<br>11<br>12<br>13<br>
-   	2<br>11<br>12<br>13<br>7<br>11<br>12<br>13<br>
-   	3<br>11<br>12<br>13<br>7<br>11<br>12<br>13<br>
-   	4<br>11<br>12<br>13<br>7<br>11<br>12<br>13<br>
-   	5<br>11<br>12<br>13<br>7<br>11<br>12<br>13<br>
-   	6<br>11<br>12<br>13<br>7<br>11<br>12<br>13<br>
-   	7<br>11<br>12<br>13<br>
-   </div> 
-<!-- 북마크 끝 ! -->
+        }
 
-    <img id="wordBook" src="../static/img/wordBook.png" style="z-index:11;position: absolute;  right: 15%; top: 2%; height: 130px;transition: .4s;transform-style: preserve-3d;" width=5% height=12%;>
+        function close_pop(){
+            $("#bookmarkDiv").hide();
+        }
+    </script>
+
+    <!-- 북마크 시작 -->
+    <div id="bookmarkDiv" class="front2" style="overflow-y:scroll;display:none;">
+        <!-- <div id="shadow" class="front2" style="visibility: hidden;background:black;top:50%;width:100%;height:100%;opacity: 0.8;"></div> -->
+        <img id="closePop" onclick="close_pop()" src="../static/img/exit_Icon.png" style="position: absolute; right: 1%; top: 3%;" width=5% height=8% alt ="cookie1.png">
+        <br><br><br>
+        <!--북마크 나열 -->
+        <div id="bookmarkhtml">
+        </div>
+    </div>
+    <!-- 북마크 끝 ! -->
+
+    <img id="wordBook" onclick="open_pop()"  src="../static/img/wordBook.png" style="z-index:11;position: absolute;  right: 15%; top: 2%; height: 130px;transition: .4s;transform-style: preserve-3d;" width=5% height=12%;>
     <a href="{{ url_for('root') }}"><img id="backIcon" src="../static/img/backIcon.png" style="z-index:11;position: absolute;  right: 16%; bottom: 5%; height: 120px;transition: .4s;transform-style: preserve-3d;" width=6% height=12%;></a>
     <a href="{{ url_for('clear', stage=13) }}"><img id="finishIcon"  src="../static/img/finishIcon.png" style="z-index:11;position: absolute;  right: 23%; bottom: 5%; height: 140px;transition: .4s;transform-style: preserve-3d;" width=6% height=12%;></a>
 
