류재범 작업14

--- a/redThon/templates/game.html
+++ b/redThon/templates/game.html
@@ -91,10 +91,10 @@
     <div class="card_lobby">
         <div class="card_lobby_content">
             <img src="../static/img/memorygame_logo.png" style="width:500px;margin:20px;"/><br/>
-            <img src="../static/img/memorygame_rule.png" style="width:900px;margin:20px;"/><br/>
             <img src="../static/img/start_btn.png" style="width:250px;" onclick="game_start();"/>
             <img src="../static/img/myrank_btn.png" style="width:250px;" onclick="alert('작업 예정');"/><br/>
-            <img src="../static/img/gamestop_btn.png" style="width:250px" onclick="location.href='/';"/>
+            <img src="../static/img/gamestop_btn.png" style="width:250px" onclick="location.href='/';"/><br/>
+            <img src="../static/img/memorygame_rule.png" style="width:900px;margin:20px;"/><br/>
         </div>
         <!-- <div class="card_lobby_skip"><button onclick="location.href='/';">건너뛰기</button></div> -->
     </div>
